# NDI-API-Ubuntu18.04

./: .gitignore  README.md
Documents/: 610090_5D.rom  610164_6D18.rom  DDRO-1000-1750-01_GENERIC_6D.rom
automake-1.16/: ChangeLog  Makefile.in  aclocal.m4  configure
automake-1.16/doc/: stamp-vti
gst-plugins-base-1.16.1/: Makefile  Makefile.in  _stdint.h  aclocal.m4  config.h  config.status  configure  libtool
gst-plugins-base-1.16.1/autom4te.cache/: output.0  requests  traces.0  traces.1
gst-plugins-base-1.16.1/common/: Makefile  Makefile.in
gst-plugins-base-1.16.1/docs/: Makefile  Makefile.in
gst-plugins-base-1.16.1/ext/: Makefile  Makefile.in
gst-plugins-base-1.16.1/gst/: Makefile  Makefile.in
gst-plugins-base-1.16.1/gst-libs/: Makefile  Makefile.in
gst-plugins-base-1.16.1/m4/: Makefile  Makefile.in
gst-plugins-base-1.16.1/pkgconfig/: Makefile  Makefile.in  gstreamer-allocators-1.0-uninstalled.pc  gstreamer-allocators-uninstalled.pc  gstreamer-app-1.0-uninstalled.pc  gstreamer-app-uninstalled.pc  gstreamer-audio-1.0-uninstalled.pc  gstreamer-audio-uninstalled.pc  gstreamer-audio.pc  gstreamer-fft-1.0-uninstalled.pc  gstreamer-fft-uninstalled.pc  gstreamer-gl-1.0-uninstalled.pc  gstreamer-gl-1.0.pc  gstreamer-gl-uninstalled.pc  gstreamer-pbutils-1.0-uninstalled.pc  gstreamer-pbutils-uninstalled.pc  gstreamer-plugins-base-1.0-uninstalled.pc  gstreamer-plugins-base-uninstalled.pc  gstreamer-riff-1.0-uninstalled.pc  gstreamer-video.pc  (+11 more)
gstreamer-1.16.2/: Makefile.in  aclocal.m4  config.h.in  configure
nditest/: CMakeLists.txt  mytracking.cpp
(+1073 files in other folders)
